<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonMultiStep"
        style="@style/DefaultButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/multi_steps_action"/>

    <Button
        android:id="@+id/buttonCompare"
        style="@style/DefaultButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/compare_action"/>

    <Button
        android:id="@+id/buttonMoveToBlank"
        style="@style/DefaultButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/moving_into_blank_action"/>

    <Button
        android:id="@+id/buttonFillBlank"
        style="@style/DefaultButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/filling_blank_action"/>

    <Button
        android:id="@+id/buttonRate"
        style="@style/DefaultButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/rate_action"/>
</LinearLayout>